// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormLabel default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <form>
      <div
        class="PicassoFormField-root"
      >
        <label
          class="PicassoFormLabel-root"
        >
          <span
            class="PicassoFormLabel-text"
          >
            Label
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root PicassoOutlinedInput-root PicassoInput-root PicassoInput-root PicassoOutlinedInput-rootAuto PicassoOutlinedInput-rootMedium MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
        >
          <input
            autocomplete="none"
            class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoOutlinedInput-inputMedium MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`FormLabel disabled 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <form>
      <div
        class="PicassoFormField-root"
      >
        <label
          class="PicassoFormLabel-root PicassoFormLabel-disabled"
        >
          <span
            class="PicassoFormLabel-text"
          >
            Label
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root PicassoOutlinedInput-root PicassoInput-root PicassoInput-root PicassoOutlinedInput-rootAuto PicassoOutlinedInput-rootMedium MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
        >
          <input
            autocomplete="none"
            class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoOutlinedInput-inputMedium MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`FormLabel required 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <form>
      <div
        class="PicassoFormField-root"
      >
        <label
          class="PicassoFormLabel-root"
        >
          <span
            class="PicassoFormLabel-asterisk"
          >
            *
          </span>
          <span
            class="PicassoFormLabel-text"
          >
            Label
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root PicassoOutlinedInput-root PicassoInput-root PicassoInput-root PicassoOutlinedInput-rootAuto PicassoOutlinedInput-rootMedium MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
        >
          <input
            autocomplete="none"
            class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoOutlinedInput-inputMedium MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`FormLabel required and disabled 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <form>
      <div
        class="PicassoFormField-root"
      >
        <label
          class="PicassoFormLabel-root PicassoFormLabel-disabled"
        >
          <span
            class="PicassoFormLabel-asterisk"
          >
            *
          </span>
          <span
            class="PicassoFormLabel-text"
          >
            Label
          </span>
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root PicassoOutlinedInput-root PicassoInput-root PicassoInput-root PicassoOutlinedInput-rootAuto PicassoOutlinedInput-rootMedium MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
        >
          <input
            autocomplete="none"
            class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoOutlinedInput-inputMedium MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </form>
  </div>
</div>
`;
